--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Redirecting...</title>
   </head>
   <body>
-    <p>If you are not redirected, <a href="https://example.com">click here</a>.</p>
+    <p>If you are not redirected, <a href="https://de.indeed.com/Jobs-in-Karlsruhe?vjk=787ceef6e7c7642f">click here</a>.</p>
   </body>
 </html>
