--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://example.com" />
+    <meta http-equiv="refresh" content="0; url=https://de.indeed.com/Jobs-in-Karlsruhe?vjk=787ceef6e7c7642f" />
     <title>Redirecting...</title>
   </head>
   <body>
