--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://de.indeed.com/Jobs-in-Karlsruhe?vjk=787ceef6e7c7642f" />
+    <meta http-equiv="refresh" content="0; url=https://www.instagram.com/" />
     <title>Redirecting...</title>
   </head>
   <body>
-    <p>If you are not redirected, <a href="https://de.indeed.com/Jobs-in-Karlsruhe?vjk=787ceef6e7c7642f">click here</a>.</p>
+    <p>If you are not redirected, <a href="https://www.instagram.com/">click here</a>.</p>
   </body>
 </html>
